test/Tests/VertexInput/InvalidVectorComponent.golden

test\Tests\VertexInput\InvalidVectorComponent.hs:39:10: error:
    * Cannot position vector of type V 4 Float
       at Location 0, Component 2.
    * In the expression: shader do put @"out" =<< get @"in_yz"
      In an equation for `vertex':
          vertex = shader do put @"out" =<< get @"in_yz"
   |
39 | vertex = shader do
   |          ^^^^^^^^^^...
